--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,27 @@ services:
       - "8000:8000"
     volumes:
       - ./DRFapp/service:/DRFapp/service
+    environment:
+      - DB_HOST=database
+      - DB_NAME=dbname
+      - DB_USER=dbuser
+      - DB_PASS=pass
 
     command: >
       sh -c "python manage.py runserver 0.0.0.0:8000"
+
+    depends_on:
+      database:
+        condition: service_healthy
+
+  database:
+    image: postgres:14.6-alpine
+    environment:
+      - POSTGRES_DB=dbname
+      - POSTGRES_USER=dbuser
+      - POSTGRES_PASSWORD=pass
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U dbuser -d dbname"]
+      interval: 2s
+      timeout: 2s
+      retries: 10
